actually fixed the scaling issue on mobile whew

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 body{
   background-color: #202124;
   color: white;
+  
+}
+
+#root{
   overflow: hidden;
   max-height: 100vh;
   max-width: 100vw;
